2025-12-13T01:47:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20184882770 # 837
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-13
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 140 388 / 141 389
* notice: next accum: outdated-unq outdated-all / unq all: 140 388 / 142 390
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-12]

2025-12-05T01:51:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19949988027 # 829
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 139 387 / 140 388
* notice: next accum: outdated-unq outdated-all / unq all: 140 388 / 141 389
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-29] / [2025-12-04]

2025-09-30T01:17:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18115509108 # 782
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-30
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 138 381 / 139 387
* notice: next accum: outdated-unq outdated-all / unq all: 139 387 / 140 388
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-23] / [2025-09-29]

2025-04-27T01:23:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14686968346 # 626