@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-13T01:47:36Z",
+  "timestamp" : "2025-12-15T01:57:34Z",
   "count_outdated" : 388,
   "uniques_outdated" : 140,
-  "count" : 390,
-  "uniques" : 142,
+  "count" : 391,
+  "uniques" : 143,
   "views" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-12-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
