@@ -1,3 +1,12 @@
+2025-12-15T01:57:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20218015580 # 839
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 140 388 / 142 390
+* notice: next accum: outdated-unq outdated-all / unq all: 140 388 / 143 391
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-12-14]
+
 2025-12-13T01:47:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20184882770 # 837
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-13
